# embedding_mapper_service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  logging_config.py  main.py  metrics.py  middleware.py
app/models/: __init__.py  canonical.py  extractor.py  feedback.py  resolution.py  response.py
app/routers/: backtest.py  extractor_map.py  feedback.py  health.py  map.py  pull_sync.py  review.py  sync.py
app/schemas/: erpnext.yaml  odoo.yaml  zoho.yaml
app/services/: context_builder.py  embedding_service.py  extractor_adapter.py  mapper.py  resolver.py  transformer.py  vector_service.py
app/services/connectors/: __init__.py  erpnext.py  erpnext_extractors.py
app/static/: backtest.html  review.html
scripts/: discover_erpnext.py  pull_sync.py  seed.py  seed_erpnext.json  test_e2e.py
scripts/backtest/: __init__.py  erpnext_client.py  evaluator.py  extractor.py  report.py  run.py
tests/: conftest.py  test_backtest.py  test_backtest_ui.py  test_context_builder.py  test_extractor_adapter.py  test_feedback.py  test_logging.py  test_mapper.py  test_resolver.py  test_review.py  test_transformer.py  test_vector_service.py
tests/fixtures/: sample_extractor_invoice.json  sample_invoices.json
